# acm-book

./: .gitignore  .gitmodules  Makefile  README.md  SOURCES  book.tex
problems/: include.py
problems/SPOJ/: ADAPHOTO.cpp  ADASTRNG.cpp  ILKQUERY.cpp  ILKQUERY2.cpp  ILKQUERYIII.cpp  LCS.cpp
src/datastruct/: fenwick.cpp  fenwick_range.cpp  lazysegtree.cpp  logvector.cpp  rmq.cpp  segtree.cpp  treap.cpp  treap_gensegtree.cpp  unionfind.cpp  wavelettree.cpp
src/flow/: cap_scaling.cpp  dinic.cpp  graph.cpp
src/graph/: articulation.cpp  bridges.cpp  dominator_tree.cpp  scc_kosaraju.cpp  scc_tarjan.cpp
src/math/: Fp.cpp  egcd.cpp  factorize_range.cpp  fft.cpp  findNTTParams.py  gauss.cpp  gauss_z2z.cpp  gen_primes.cpp  invmod.cpp  invmod_range.cpp  linear_reccurence.cpp  miller_rabin.cpp  opmod.cpp  pollard_rho.cpp  polynom_euclid.cpp  subset_sum.cpp  walsh_hadamard.cpp
src/misc/: lis_full.cpp  lis_short.cpp
src/precontest/: bashrc  comp.sh  make_binaries.sh  mktests.sh  template.cpp  vimrc
src/string/: ahocorasick.cpp  kmp.cpp  manacher.cpp  min_rotation.cpp  palindromic_tree.cpp  suffixarray.cpp  suffixarray_linear.cpp  suffixautomaton.cpp  zfunc.cpp
src/tree/: heavy_light.cpp  lca.cpp  lca_dyn.cpp
tests/: CMakeLists.txt
tests/src/: datastruct.cpp  datastruct.h  flow.cpp  flow.h  graph.cpp  graph.h  main.cpp  math.cpp  math.h  misc.cpp  misc.h  string.cpp  string.h  tree.cpp  tree.h
ut_src/: 2dgeometry.cpp  2sat.cpp  centroid.cpp  cht.cpp  dmst.cpp  hash.cpp  mcmf.cpp  monotonic_queue.cpp
